--- a/TemplateProject.Api/appsettings.Development.json
+++ b/TemplateProject.Api/appsettings.Development.json
@@ -5,12 +5,15 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
-    },
-    "ExternalLogin": {
-      "Google": {
-        "ClientId": "81251614276-61vjrt7ksd0p9pbltrh6sihasc5s2gg8.apps.googleusercontent.com",
-        "ClientSecret": "QY8WmI5HQloFstA3bqxSZBtQ"
-      }
     }
+  },
+  "ExternalLogin": {
+    "Google": {
+      "ClientId": "81251614276-61vjrt7ksd0p9pbltrh6sihasc5s2gg8.apps.googleusercontent.com",
+      "ClientSecret": "QY8WmI5HQloFstA3bqxSZBtQ"
+    }
+  },
+  "CustomLogin": {
+    "ClientSecret": "bYQMJ5WjcL0KGn10wRCYQmHpHcBMMDt5"
   }
 }
